[package]
name = "pixels-android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
log = "0.4"
pixels = "0.9"
winit = "0.26"
winit_input_helper = "0.12"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "0.5", features = ["logger"] }

