[package]
name = "pixels-android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
log = "0.4"
pixels = "0.9"
winit = { git = "https://github.com/rust-windowing/winit.git" }
anyhow = "1"

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"
ndk-glue = { version = "0.6", features = ["logger"] }
jni = "0.19"
